--- a/.classpath
+++ b/.classpath
@@ -14,7 +14,7 @@
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry kind="lib" path="C:/Program Files/Apache Software Foundation/apache-tomcat-9.0.62-windows-x64/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="C:/Users/co938/Downloads/jstl-1.2.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Apache Software Foundation/apache-tomcat-9.0.62-windows-x64/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
