--- a/.classpath
+++ b/.classpath
@@ -16,5 +16,7 @@
 	<classpathentry kind="lib" path="C:/Program Files/Apache Software Foundation/apache-tomcat-9.0.62-windows-x64/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="C:/Program Files/Apache Software Foundation/apache-tomcat-9.0.62-windows-x64/lib/jsp-api.jar"/>
 	<classpathentry kind="lib" path="src/main/webapp/WEB-INF/lib/jstl-1.2.jar"/>
+	<classpathentry kind="lib" path="C:/My_lib/json-simple-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/My_lib/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31/mysql-connector-j-8.0.31.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
